Removed Suns BASE64 en/decoder.